--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.1.14
   google_fonts: ^6.1.0
   image_picker: ^1.0.4
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
