--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - images/setting.jpg
     - images/talkus.png
     - images/track.png
+    - images/poll.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
